corrections to the indicated fragments

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -131,11 +131,32 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2011}
 }
 
-
 @misc{energa,
     author = {ENERGA},
     title = {{Serwis obsługi ENERGA24. PIERWSZE KROKI}},
     note = {\url{https://www.energa.pl/energa24/pierwsze-kroki.html} [dostęp dnia 19 września 2024]},
+    year = {2024}
+}
+
+@misc{MPWiK,
+		author = {Miejskie Przedsiębiorstwo Wodociągów i Kanalizacji w Warszawie},
+    title = {{Wodociągi Warszawskie. Strona główna}},
+    note = {\url{https://ebok.mpwik.com.pl/#/login} [dostęp dnia 21 września 2024]},
+    year = {2024}
+}
+
+
+@misc{e-kartoteka,
+    author = {E-Kartoteka},
+    title = {{E-Kartoteka. Strona Główna}},
+    note = {\url{https://e-kartoteka.pl/#/login} [dostęp dnia 21 września 2024]},
+    year = {2024}
+}
+
+@misc{e-kartoteka_manual,
+    author = {E-Kartoteka},
+    title = {{E-Kartoteka. Instrukcja obsługi aplikacji mobilnej}},
+    note = {\url{https://www.e-kartoteka.pl/assets/image/aplikacja/instrukcja.pdf} [dostęp dnia 22 września 2024]},
     year = {2024}
 }
 
