--- a/Dyplom/streszczenie.tex
+++ b/Dyplom/streszczenie.tex
@@ -21,7 +21,7 @@ W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK, o
 {
 \selectlanguage{english}
 \begin{abstract}
-The engineering thesis focuses on the development of an application supporting the eCSO for housing cooperatives. The aim of the project is to create a system that automates communication between the cooperative and its residents, ensuring data security and flexibility in accessing information. The designed application allows users to view contracts, invoices, reports, and announcements, as well as make online payments, all within an intuitive and user-friendly environment.
+The engineering thesis focuses on the development of an application supporting the eBOK for housing cooperatives. The aim of the project is to create a system that automates communication between the cooperative and its residents, ensuring data security and flexibility in accessing information. The designed application allows users to view contracts, invoices, reports, and announcements, as well as make online payments, all within an intuitive and user-friendly environment.
 
 The thesis includes a detailed analysis of eBOK system functionalities, design assumptions, and the application implementation using the Spring framework. The project leverages technologies such as Spring Boot, Hibernate, Next.js and a PostgreSQL database. The outcome of this work is a functional application that can be implemented in a real environment, improving the daily customer service for residents and enhancing the efficiency of the housing cooperative's operations.
 \end{abstract}
