--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -6,9 +6,10 @@
 \noindent\vspace{-\topsep-\partopsep-\parsep} % Jeśli zaczyna się od otoczenia description, to otoczenie to ląduje lekko niżej niż wylądowałby zwykły tekst, dlatego wstawiano przesunięcie w pionie
 \begin{description}[labelwidth=*]
   \item [eBOK] (pl.\ \emph{Elektroniczne Biuro Obsługi Klienta})
-  \item [eCSO] (ang.\ \emph{Electronic Customer Service Office})
+  \item [WWW] (ang.\ \emph{World Wide Web})
   \item [API] (ang.\ \emph{Application Programming Interface})
   \item [HTTPS] (ang.\ \emph{Hypertext Transfer Protocol Secure})
+	\item [HTTP] (ang.\ \emph{Hypertext Transfer Protocol})
   \item [TLS] (ang.\ \emph{Transport Layer Security})
   \item [JSON] (ang.\ \emph{JavaScript Object Notation})
   \item [SQL] (ang.\ \emph{Structured Query Language})
