--- a/Dyplom/rozdzial02.tex
+++ b/Dyplom/rozdzial02.tex
@@ -112,7 +112,7 @@ Wymagania funkcjonalne aplikacji eBOK skupiają się na kluczowych obszarach dzi
 
 	\item \textbf{Skalowalność:} System musi być na tyle elastyczny, aby mógł obsługiwać zarówno małe wspólnoty mieszkaniowe, jak i większe spółdzielnie, z możliwością zarządzania setkami lub tysiącami lokali aby obsłużyć rosnącą liczbę użytkowników oraz lokali bez znaczących spadków wydajności. Zastosowanie technologii Docker do konteneryzacji backendu i bazy danych PostgreSQL umożliwia łatwe skalowanie poziome (dodawanie kolejnych instancji), co pozwala na rozdzielenie obciążenia na większą liczbę serwerów.
 
-	\item \textbf{Bezpieczeństwo:} Wszystkie dane użytkowników muszą być przechowywane i przesyłane w sposób bezpieczny. Wymagane jest szyfrowanie komunikacji między frontendem a backendem (TLS), a także autoryzacja użytkowników za pomocą OAuth 2.0. Ponadto system musi chronić dane przed nieautoryzowanym dostępem, co obejmuje zabezpieczenia na poziomie aplikacji, takie jak ograniczenie dostępu do funkcji na podstawie roli użytkownika (np. właściciel, najemca, administrator).
+	\item \textbf{Bezpieczeństwo:} Wszystkie dane użytkowników muszą być przechowywane i przesyłane w sposób bezpieczny. Wymagane jest szyfrowanie komunikacji między frontendem a backendem (TLS), a także autoryzacja użytkowników za pomocą OAuth 2.0. Ponadto system musi chronić dane przed nieautoryzowanym dostępem, co obejmuje zabezpieczenia na poziomie aplikacji, takie jak ograniczenie dostępu do funkcji na podstawie roli użytkownika (np. właściciel, najemca, administrator), uwierzytelnianie dwuskładnikowe oraz ochronę przed zagrożeniami takimi jak ataki SQL Injection czy XSS.
 
 	\item \textbf{Wydajność:} System powinien być responsywny, zapewniając jak najszybszy możliwy czas odpowiedzi na zapytanie. Backend oparty na Spring Boot oraz baza danych PostgreSQL muszą być odpowiednio zoptymalizowane pod kątem operacji zapisu i odczytu, aby sprostać wymaganiom w czasie rzeczywistym, szczególnie podczas obciążeń związanych z masowym przetwarzaniem danych (np. zgłoszenia techniczne, płatności).
 
